--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-
+  <div class="my-style"><a href="https://gemdelle.github.io/fCC-RWD-11-BalanceSheet"></a></div>
+  <div class="fcc-style"><a href="https://gemdelle.github.io/fCC-RWD-11-BalanceSheet/original"></a></div>
+  
   <div class="star"></div>
   <div class="star-02"></div>
   <div class="moon"></div>
