--- a/original.html
+++ b/original.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
+    <div class="my-style"><a href="https://gemdelle.github.io/fCC-RWD-11-BalanceSheet"></a></div>
+    <div class="fcc-style"><a href="https://gemdelle.github.io/fCC-RWD-11-BalanceSheet/original"></a></div>
+
     <div class="wheel">
       <span class="line"></span>
       <span class="line"></span>
